# obsidian-mcp

./: README.md  config.py  pyproject.toml  server.py
search/: bm25.py  indexer.py
vault/: reader.py
